# NetworkAdministrator

./: .gitignore  Cargo.toml  README.md  TODO.md
.config/: known_macs.json.example
.proxy/: filter.toml.example
ads-list/: .gitignore  README.md
ansible/: .gitignore  configure-systemd.yaml  homebrew-router.yaml  ip-forwarding.yaml  update-repo.yaml
scripts/: .env.example  README.md  create_inventory.py  load_ads.py  requirements.txt  run-pi-hole.sh  run-playbooks.sh
src/: config.rs  lib.rs  main.rs
src/admin/: handlers.rs  mod.rs  routes.rs
src/ads/: request.rs  response.rs
src/cache/: config.rs  metrics.rs  mod.rs  response.rs  stats.rs
src/cli/: mod.rs  types.rs
src/cli/commands/: mod.rs  proxy.rs  scan.rs  sniff.rs
src/client/: handlers.rs  http.rs  https.rs  mod.rs
src/config/: constants.rs  mod.rs  settings.rs
src/domains/: mod.rs
src/filters/: domain_filter.rs  mod.rs  utils.rs
src/logging/: mod.rs
src/proxy/: handlers.rs  http.rs  https.rs  mod.rs
src/scan/: arp.rs  constants.rs  dtypes.rs  mod.rs  utils.rs
src/schemas/: arp.rs  mod.rs  request.rs  response.rs
src/server/: mod.rs  server.rs  services.rs  utils.rs
src/sniff/: decoder.rs  mod.rs  types.rs
src/utils/: ads.rs  buffer.rs  decoders.rs  dns.rs  http.rs  mod.rs  stream.rs  tls.rs
templates/: dhcpd.conf.j2  inventory.ini.j2  network-proxy.service.j2  pi-hole.service.j2
templates/etc/: nftables.conf.j2
templates/etc/dhcp/: dhcpd.conf.j2
templates/etc/hostapd/: hostapd.conf.j2
