[package]
name = "network-administrator"
version = "0.1.0"
edition = "2024"

[dependencies]
brotli = "8.0.2"
bytes = "1.11.0"
certgenutil = "0.1.1"
clap = { version = "4.5.53", features = ["derive"] }
flate2 = "1.1.5"
futures-util = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["full"] }
native-tls = "0.2.14"
openssl = "0.10.75"
rcgen = { version = "0.14.5", features = ["pem"] }
reqwest = { version = "0.12.24", features = ["json"] }
rustls = "0.23.35"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-util = "0.7.17"
tracing = "0.1.41"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "local-time"] }
trust-dns-resolver = "0.23.2"
uuid = { version = "1.18.1", features = ["v4"] }
zstd = "0.13.3"
